--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #090227;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,7 +52,7 @@ ul{
   align-items: center;
   gap: 20px;
   list-style: none;
-    color: black;
+  color: black;
   font-weight: bold;
   font-size: 1.2rem;
 }
@@ -152,7 +152,7 @@ body, html{
   transform-origin: center;
 }
 
-/* Transform to X */
+
 .menu-icon.open span:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
 }
@@ -428,9 +428,11 @@ h2 span {
   align-items: center;
   justify-content: center;
   max-width: 1900px;
- margin: 0 auto;
- top: 0;
+  margin: 0 auto;
+  top: 0;
   padding-top: 6rem;
+  width: 100%;
+  height: auto;
 }
 
 span{
@@ -444,76 +446,55 @@ span{
   text-align: center;
   font-size: 30px;
   font-family:Arial, Helvetica, sans-serif ;
- top: 0;
+  top: 0;
   padding-top: 5rem;
   font-weight: 800;
 }
 
 
 .about-profile{
-  margin: auto;
-  max-width: 1200px;
-  flex-wrap: wrap;
-  width: 100%;
-  align-items: center;
   display: flex;
-  justify-content: center;
-  gap: 40px;
-   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  top: 0;
-  margin: 15px 15px;
+  align-items: center;
+  justify-content: space-between;
   height: fit-content;
-}
-
-.about-profile img{
-  flex-wrap: wrap;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  max-width: 1600px;
   width: 100%;
-  height: 70%;
-  min-height: 100px;
-  border-radius: 10px;
-  margin: auto;
-  height: fit-content;
+  padding: 5rem;
+  height: auto;
+  margin: 0 auto;
+  gap: 30px;
 }
-
 
 .img-boxing {
-  background-color: white;
-  padding: 10px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-  margin-bottom: 20px;
-  margin-top: 20px;
-  box-shadow: 0 4px 15px rgba(75, 62, 62, 0);
+  height: 350px;
   width: 100%;
-  
+  max-width: 800px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
-
 .img-boxing img {
-  object-fit: cover;
-  display: block;width: 900px;
-  height: 300px;
-  max-width: 100%;
-  border-top-left-radius: 10px;
-   border-top-right-radius: 10px;
-}
-
-h1{
-text-align: center;
+   background: white;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  width: 100%;
+  max-width: 800px;
 }
 
 .about-text{
+ height: 350px;
   width: 100%;
-  padding: 15px 20px;
-  margin-top: 0;
-  max-width: 900px;
- box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
- margin: 10px;
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  max-width: 800px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  padding: 2rem;
 }
+
+
+
 
 
 .header-skills{
@@ -680,153 +661,6 @@ max-width: 800px;
 }
 
 
-/* dark mode*/
-
-body.dark-mode {
-  background-color: #121212;
-  color: #f0f0f0;
-}
-
-
-
-body.dark-mode nav {
-  background-color: black;
-  color: white;
-  box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
-
-}
-
-body.dark-mode .tag img{
-  filter: brightness(1) invert(1); 
-}
-
-body.dark-mode .contact-img img {
-     filter: brightness(1) invert(1); 
-}
-
-body.dark-mode .Jervin,
-body.dark-mode .tag,
-body.dark-mode .header-about{
-     background-color: #121212;
-}
-
-body.dark-mode .imagess img{
-    filter: brightness(1) invert(1);  
-}
-body.dark-mode .about-text,
-body.dark-mode .card{
-   box-shadow: 0 2px 10px rgba(165, 150, 150, 0.479);
-   background-color: black;
-  color: #fff;
-}
-
-
-body.dark-mode .a{
-  background-color: white;
-  color: black;
-
-}
-
- body.dark-mode .a::before{
-   background-color: #f1a20e;
-   color: white;
- }
-body.dark-mode .slogan,
-body.dark-mode .name,
-body.dark-mode .text-box,
-body.dark-mode .img-box,
-body.dark-mode .social-icons,
-body.dark-mode .descrip,
-body.dark-mode nav ul,
-body.dark-mode .about-profile {
-  background-color: black;
-  color: #fff;
-  box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
-}
-
-body.dark-mode .logo i,
-body.dark-mode .menu-toggle,
-body.dark-mode #nav-links a {
-  color: #ff9900;
-}
-
-
-body.dark-mode .header-skills{
-   background-color: #121212;
-}
-body.dark-mode #nav-links a.active {
-  color: #ff9900;
-  border-bottom: 2px solid #ff9900;
-}
-
-body.dark-mode .menu-icon.open,
-body.dark-mode .social-icons a {
-  color: #ddd;
-}
-
-body.dark-mode .menu-icon span{
-  background: white;
-}
-
-
-body.dark-mode nav ul a:hover,
-body.dark-mode .social-icons a:hover {
-  color: #ff9900;
-  transition: 0.5s ease-in-out;
-}
-
-body.dark-mode .container {
-  background-color: #1a1a1a;
-  color: #f0f0f0;
-}
-
-body.dark-mode a{
- 
-}
-
-body.dark-mode .nav-links {
-  opacity: 0;
-  background: rgba(0, 0, 0, 0);
-  color: white;
-   -webkit-backdrop-filter: blur(15px); /* Safari support */
-}
-body.dark-mode .navbar{
-   background: rgba(0, 0, 0, 0.2); /* dark translucent background */
-  backdrop-filter: blur(15px);    /* blur glass effect */
-  -webkit-backdrop-filter: blur(15px); /* Safari support */
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-body.dark-mode footer{
-
-    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
-}
-body.dark-mode .Jervin,
-body.dark-mode .intro{
-  background-color: #1a1a1a;
-  color: #f0f0f0;
-  box-shadow: 0 4px 15px rgba(255, 255, 255, 0.05);
-}
-
-body.dark-mode .card img{
- object-fit: contain;
-   filter: brightness(1) invert(1); 
-}
-
-body.dark-mode nav ul a{
-    background-color: rgba(10, 8, 8, 0.781);
-  color: #f0f0f0;
- 
-}
-
-body.dark-mode .img-boxing {
-  background-color: #121212;
-}
-
-body.dark-mode footer{
-  background-color: #121212;
-}
-
 input{  
    display: none;
 }
@@ -883,7 +717,7 @@ label{
 }
 
 input[type=checkbox]:checked  {
-    background-color: #2c2c2f;
+   
 }
 
 input[type=checkbox]:checked +  label{
@@ -938,46 +772,23 @@ footer{
 }
 
 .a{
-  margin: 30px 50px;
-  padding: 10px 30px;
-  font-size: 1em;
   display: flex;
-  align-items: center;
   justify-content: center;
-  text-align: center;
-  position: relative;
-  background-color: #f1a20e;
-  border: 1px solid black;
+  align-items: center;
+  width: 200px;
+  height: 45px;
+  background-color: grey;
   text-decoration: none;
-  z-index: 1;
-  transition: 0.5s ;
-  border-radius: 30px;
-  color: black;
-}
-
-.a::before{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: white;
-  z-index: -1;
-  transform-origin: top;
-  transition: 0.5s ease;
-  transform: scaleX(1);
-    border-radius: 30px;
+  color: #f1a20e;
+  font-weight: 800;
+  border-radius: 10px;
+  margin: 50px 60px;
 }
 
 .a:hover{
-  color: white;
-}
-
-.a:hover::before{
-   transform-origin: bottom;
-     transition: 0.5s ease;
-  transform: scalex(0);
+  transition: all 0.5s ease-in-out;
+  background-color: whitesmoke;
+  border: 1px solid rgba(43, 33, 33, 0.808);
 }
 
 h1{
@@ -1006,6 +817,168 @@ h1{
 }
 
 
+
+
+/* dark mode*/
+
+body.dark-mode {
+  background-color: #090227;
+  color: #f0f0f0;
+}
+
+
+
+body.dark-mode nav {
+  background-color: #090227;
+  color: white;
+   box-shadow: 0 0 20px rgba(255, 255, 255, 0.12);
+}
+
+body.dark-mode .tag img{
+  filter: brightness(1) invert(1); 
+}
+
+body.dark-mode .contact-img img {
+  background-color: transparent;
+  mix-blend-mode: screen;
+  filter: brightness(1) invert(1); 
+}
+
+body.dark-mode .Jervin,
+body.dark-mode .tag,
+body.dark-mode .header-about{
+     background-color: #090227;
+}
+
+body.dark-mode .imagess img{
+   background-color: transparent;
+  mix-blend-mode: screen;
+    filter: brightness(1) invert(1);  
+}
+body.dark-mode .about-text,
+body.dark-mode .card{
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.12);
+   background-color: #090227;
+  color: #fff;
+}
+
+
+body.dark-mode .a{
+  background-color: white;
+  color: #090227;
+
+}
+
+ body.dark-mode .a::before{
+   background-color: #f1a20e;
+   color: white;
+ }
+body.dark-mode .skills,
+body.dark-mode .slogan,
+body.dark-mode .name,
+body.dark-mode .text-box,
+body.dark-mode .img-box,
+body.dark-mode .social-icons,
+body.dark-mode .descrip,
+body.dark-mode nav ul,
+body.dark-mode .about-profile {
+  background-color:  #090227;
+  color: #fff;
+   box-shadow: 0 0 20px rgba(255, 255, 255, 0.12);
+}
+
+body.dark-mode .logo i,
+body.dark-mode .menu-toggle,
+body.dark-mode #nav-links a {
+  color: #ff9900;
+}
+
+
+body.dark-mode .header-skills{
+   background-color: #090227;
+}
+body.dark-mode #nav-links a.active {
+  color: #ff9900;
+  border-bottom: 2px solid #ff9900;
+}
+
+body.dark-mode .menu-icon.open,
+body.dark-mode .social-icons a {
+  color: #ddd;
+}
+
+body.dark-mode .menu-icon span{
+  background: white;
+}
+
+
+body.dark-mode nav ul a:hover,
+body.dark-mode .social-icons a:hover {
+  color: #ff9900;
+  transition: 0.5s ease-in-out;
+}
+
+body.dark-mode .container {
+  background-color: #090227;
+  color: #f0f0f0;
+}
+
+body.dark-mode .nav-links a{
+  background: transparent;
+  color: white;
+}
+
+body.dark-mode .nav-links {
+  opacity: 0;
+  color: white;
+   background: transparent;
+}
+body.dark-mode .navbar{
+   background: rgba(0, 0, 0, 0); /* dark translucent background */
+  backdrop-filter: blur(15px);    /* blur glass effect */
+  -webkit-backdrop-filter: blur(15px); /* Safari support */
+}
+
+body.dark-mode footer{
+
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.12);
+}
+body.dark-mode .Jervin,
+body.dark-mode .intro{
+  background-color: #090227;
+  color: #f0f0f0; 
+}
+
+body.dark-mode .card img{
+ object-fit: contain;
+   filter: brightness(1) invert(1); 
+}
+
+body.dark-mode .img-boxing{
+     box-shadow: 0 0 20px rgba(255, 255, 255, 0.12);
+}
+
+body.dark-mode ul{
+opacity: 1;
+  color: white;
+   background: transparent;
+     backdrop-filter: blur(0);    /* blur glass effect */
+  -webkit-backdrop-filter: blur(0);
+
+}
+body.dark-mode ul a{
+  color: white;
+  background: transparent;
+ 
+}
+
+body.dark-mode .img-boxing {
+  background-color: #090227;
+}
+
+body.dark-mode footer{
+  background-color: #090227;
+}
 
 /* MOBILE PHONR MEDIA */
 
@@ -1039,7 +1012,16 @@ h1{
   }
 
   .contact{
+    text-align: center;
     font-size: 70%;
+  }
+  
+  .about-text{
+      min-height: 400px;
+  }
+
+  .img-boxing img{
+    object-fit: cover;
   }
 
 }
@@ -1072,19 +1054,11 @@ h1{
   justify-content: flex-start;
 }
 
-
 }
 
 
 @media (max-width: 768px){
-  .About{
-    top: 0;
-    width: 100%;
-    max-width: 700px;
-    padding-top: 2rem;
-    left: 0;
-    right: 0;
-  }
+ 
    .imgver{
     padding: 15px 20px
    }
@@ -1101,10 +1075,10 @@ h1{
   ul{
     display: none;
   }
+
 }
 
 @media(max-width: 490px) {
-
   .img-box img{
     height: fit-content;
   }
@@ -1112,18 +1086,9 @@ h1{
     height: auto;
    }
 
-   .About{
-    width: 100%;
-   }
-
-
    .tag img{
     width: 100%;
      height: 50px;
-   }
-
-   .about-profile{
-    width: 100%;
    }
 
    .tag{
@@ -1131,11 +1096,7 @@ h1{
       flex-direction: row;
       height: 10rem;
    }
-
-   .About{
-    top: 0;
-    padding-top: 3rem;
-   }
+   
 
    
 }
@@ -1150,12 +1111,25 @@ h1{
   .img-box img{
     object-fit: cover;
   }
+
+  .img-boxing img{
+    object-fit: cover;
+    height: 200px;
+  }
+
+  .img-boxing{
+    height: 200px;
+  }
+
+  .about-text{
+    height: 500px;
+  }
+
 }
 
 
 
 @media (max-width: 1900px){
-
 .intro{
 display: flex;
 flex-wrap: nowrap;
@@ -1164,13 +1138,13 @@ flex-wrap: nowrap;
 
 .descrip{
 width: 100%;
-max-width: 1900px;
+max-width: 1620px;
 }
 
 .slogan{
   text-align: center;
   width: 100%;
-  max-width: 1900px;
+  max-width: 1620px;
 }
 
 .jervin{
@@ -1213,6 +1187,7 @@ display: flex;
 flex-wrap: wrap-reverse;
 
 }
+
 .img-box{
 width: 100%;
 max-width: 900px;
@@ -1223,7 +1198,8 @@ width: 100%;
 max-width: 900px;
 }
 
-.Jervin, .descrip{
+.Jervin,
+ .descrip{
 width: 100%;
 }
 
@@ -1242,12 +1218,34 @@ width: 150px;
 .descrip{
   width: 100%;
   max-width: 900px;
+  padding: 1rem;
 }
 
 .slogan{
   width: 100%;
 }
 
+.About{
+  width: 100%;
+  margin: 0 auto;
+}
+
+.about-profile{
+  flex-direction: column;
+  padding: 0%;
+  max-width: 900px;
+  width: 90%;
+  border-radius: 10px;
+  padding: 1rem;
+}
+
+ul{
+  display: none;
+}
+
+.menu-icon{
+  display: flex;
+}
 
 }
 
@@ -1295,6 +1293,12 @@ display: none;
 display: flex;
 flex-direction: row;
 }
+
+.about-profile{
+  gap: 40px;
+  width: 90%;
+}
+
 
 
 }
