--- a/style.css
+++ b/style.css
@@ -451,7 +451,6 @@ span{
   font-weight: 800;
 }
 
-
 .about-profile{
   display: flex;
   align-items: center;
@@ -496,7 +495,7 @@ span{
 
 .about-text div{
   font-size: 15px;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
 }
 
 
@@ -724,7 +723,7 @@ input[type=checkbox]:checked  {
 }
 
 input[type=checkbox]:checked +  label{
-    background-color: #2c2c2f;
+    background-color: #05083e;
      box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5),
 }
 
@@ -825,14 +824,14 @@ h1{
 /* dark mode*/
 
 body.dark-mode {
-  background-color:  #030530;
+  background-color:  #05083e;
   color: #f0f0f0;
 }
 
 
 
 body.dark-mode nav {
-  background-color: #040740;
+  background-color:#05083e;
   color: white;
    box-shadow: 0 0 20px rgba(255, 255, 255, 0.12);
 }
@@ -850,11 +849,11 @@ body.dark-mode .contact-img img {
 body.dark-mode .Jervin,
 body.dark-mode .tag,
 body.dark-mode .header-about{
-     background-color:  #030530;
+     background-color:  #05083e;
 }
 
 body.dark-mode #loader-wrapper{
-    background-color:  #030530;
+    background-color:  #05083e;
 }
 
 body.dark-mode .imagess img{
@@ -865,14 +864,14 @@ body.dark-mode .imagess img{
 body.dark-mode .about-text,
 body.dark-mode .card{
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.12);
-   background-color:  #030530;
+   background-color:  #05083e;
   color: #fff;
 }
 
 
 body.dark-mode .a{
   background-color: white;
-  color:  #030530;
+  color:  #05083e;
 
 }
 
@@ -887,9 +886,8 @@ body.dark-mode .text-box,
 body.dark-mode .img-box,
 body.dark-mode .social-icons,
 body.dark-mode .descrip,
-body.dark-mode nav ul,
 body.dark-mode .about-profile {
-  background-color:   #030530;
+  background-color:   #05083e;
   color: #fff;
    box-shadow: 0 0 20px rgba(255, 255, 255, 0.12);
 }
@@ -902,7 +900,7 @@ body.dark-mode #nav-links a {
 
 
 body.dark-mode .header-skills{
-   background-color:  #030530;
+   background-color:  #05083e;
 }
 body.dark-mode #nav-links a.active {
   color: #ff9900;
@@ -926,20 +924,11 @@ body.dark-mode .social-icons a:hover {
 }
 
 body.dark-mode .container {
-  background-color: #030530;
+  background-color: #05083e;
   color: #f0f0f0;
 }
 
-body.dark-mode .nav-links a{
-  background: transparent;
-  color: white;
-}
 
-body.dark-mode .nav-links {
-  opacity: 0;
-  color: white;
-   background: transparent;
-}
 body.dark-mode .navbar{
    background: rgba(0, 0, 0, 0); /* dark translucent background */
   backdrop-filter: blur(15px);    /* blur glass effect */
@@ -952,7 +941,7 @@ body.dark-mode footer{
 }
 body.dark-mode .Jervin,
 body.dark-mode .intro{
-  background-color:  #030530;
+  background-color:  #05083e;
   color: #f0f0f0; 
 }
 
@@ -980,11 +969,11 @@ body.dark-mode ul a{
 }
 
 body.dark-mode .img-boxing {
-  background-color:  #030530;
+  background-color:  #05083e;
 }
 
 body.dark-mode footer{
-  background-color:  #030530;
+  background-color:  #05083e;
 }
 
 /* MOBILE PHONR MEDIA */
@@ -1023,9 +1012,6 @@ body.dark-mode footer{
     font-size: 70%;
   }
   
-  .about-text{
-      min-height: 400px;
-  }
 
   .img-boxing img{
     object-fit: cover;
@@ -1129,7 +1115,8 @@ body.dark-mode footer{
   }
 
   .about-text{
-    height: 500px;
+    width: 100%;
+    height: auto;
   }
 
 }
