--- a/style.css
+++ b/style.css
@@ -258,12 +258,13 @@ height: 300px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   width: 100%;
   max-width: 800px;
+    border-radius: 10px;
 }
 
 .img-box img{
   object-fit: cover;
-    border-top-left-radius:  10px;
-  border-top-right-radius:  10px;
+    border-bottom-left-radius:  0;
+  border-bottom-right-radius:  0;
 }
 
 
