--- a/style.css
+++ b/style.css
@@ -253,11 +253,11 @@ height: 300px;
 }
 
 .img-box {
-  height: auto;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   width: 100%;
   max-width: 800px;
+  height: auto;
   align-items: center;
 }
 
@@ -267,6 +267,7 @@ height: 300px;
   object-fit: cover;
   border-bottom-left-radius:  0;
   border-bottom-right-radius:  0;
+
 }
 
 .cons{
@@ -285,10 +286,11 @@ height: 300px;
   padding: 1.5rem;
   width: 400px;
   height: auto;
+  border-bottom-right-radius: 10px;
 }
 
 .social-icons {
-  background-color: white;
+  padding: 0%;
   font-size: 1.3em;
   width: 100%;
   text-align: center;
@@ -296,6 +298,8 @@ height: 300px;
   display: flex;
   justify-content: space-between;
   text-align: center;
+ border-bottom-left-radius: 10px;
+   border-bottom-right-radius: 10px;
 }
 
 .social-icons a {
@@ -1124,6 +1128,7 @@ body.dark-mode footer{
     font-size: 100%
   }
 
+
 }
 
 @media(max-width: 490px) {
@@ -1145,7 +1150,13 @@ body.dark-mode footer{
       height: 10rem;
    }
    
-
+   .img-box img{
+    height: 150px;
+   }
+   
+   .img-box{
+    height: 100%;
+   }
    
 }
 
