--- a/style.css
+++ b/style.css
@@ -108,9 +108,9 @@ body, html{
   justify-content: flex-start;
   align-items: stretch;
   overflow: hidden;
-  transition: height 1s ease;
+  transition: height 0.7s ease;
   z-index: 999;
-   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 .navbar.open {
@@ -243,9 +243,10 @@ height: 300px;
   display: flex;
   text-align: center;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  padding: 1rem;
 }
 
 .text{
@@ -272,14 +273,16 @@ height: 300px;
 }
 
 .cons{
-  padding: 0.5rem;
-  gap: 20px;
+  padding: 0.3rem;
+  gap: 10px;
   display: flex;
   text-align: center;
-    align-items: center;
-    justify-content: center;
-    width: 400px;
-    height: auto;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: auto;
+  font-weight: 800;
+  font-size: 130%;
 }
 
 .cons, .dw {
@@ -287,8 +290,9 @@ height: 300px;
 }
 
 .dl{
-    padding: 0;
+  padding: 0;
   margin: 0;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5); /* X Y Blur Color */
 }
 
 
@@ -301,8 +305,6 @@ height: 300px;
 }
 
 .social-icons {
-    padding: 0;
-  margin: 0;
   font-size: 1.3em;
   width: 100%;
   text-align: center;
@@ -324,10 +326,10 @@ height: 300px;
    
 }
 
-.dl:hover{
-   color: white;
-    transform: translateY(-8px); 
-      transition:  0.5s ease;
+ .dw .dl:hover{
+  color: white;
+  transform: translateY(-8px); 
+  transition:  0.5s ease;
 }
 
 
@@ -404,7 +406,6 @@ h2 span {
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   width: 100%;
@@ -477,6 +478,7 @@ h2 span {
   padding-top: 6rem;
   width: 100%;
   height: auto;
+
 }
 
 span{
@@ -534,8 +536,17 @@ span{
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   padding: 2rem;
+  text-align: center;
 }
-.texting{
+
+.textingg,
+.texting  {
+  height: auto;
+  width: 100%;
+  text-align: center;
+}
+
+h1{
   text-align: center;
 }
 
@@ -545,12 +556,15 @@ span{
   padding-bottom: 1rem;
 }
 
+h2{
+  display: inline;
+}
 
 .header-skills{
   width: 100%;
   height: 70px;
   background-color: white;
-  margin-top: 40px;
+  margin-top: 60px;
   text-align: center;
   font-size: 30px;
   font-family:Arial, Helvetica, sans-serif ;
@@ -559,7 +573,7 @@ span{
 
 .section-skills{
   width: 100%;
-  margin:auto;
+  margin-top: 60px;
   height: auto;
   display: flex;
   align-items: center;
@@ -850,7 +864,6 @@ h1{
   align-items: center;
   justify-content: center;
   width: 100%;
-
 }
 
 .contact{
@@ -863,6 +876,7 @@ h1{
   align-items: center;
    justify-content: center;
    display: flex;
+
 }
 
 
@@ -876,7 +890,7 @@ body.dark-mode {
 }
 
 
-body.dark-mode .cons,
+
 body.dark-mode nav {
   background-color:#05083e;
   color: white;
@@ -1097,6 +1111,11 @@ body.dark-mode footer{
   justify-content: flex-start;
 }
 
+.Jervin{
+  flex-direction: column-reverse;
+}
+
+
 }
 
 
@@ -1130,14 +1149,20 @@ body.dark-mode footer{
   }
 
  .cons{
-    height: auto;
+    height: 48px;
     width: 50%;
+    border-bottom-left-radius: 10px;
   }
   .social-icons{
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 100%
+  }
+
+  .name{
+    display: flex;
+    gap: 30px;
   }
 
 
@@ -1169,7 +1194,7 @@ body.dark-mode footer{
    .img-box{
     height: 100%;
    }
-   
+
 }
 
 
@@ -1196,6 +1221,7 @@ body.dark-mode footer{
     width: 100%;
     height: auto;
   }
+  
 
 }
 
@@ -1223,6 +1249,7 @@ max-width: 1620px;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap-reverse;
   
 }
 
@@ -1321,6 +1348,10 @@ ul{
 
 .img-boxing img{
   object-fit: cover;
+}
+
+.slogan-text{
+  font-size: 100%;
 }
 
 
