--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ body, html{
 
 .intro img {
 width: 100%;
-border-radius: 10px;
+border-radius: 5px;
 height: 300px;
 
 }
@@ -228,7 +228,7 @@ height: 300px;
   width: 100%;
   max-width: 800px;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   padding: 5px 10px;
 
@@ -244,7 +244,7 @@ height: 300px;
   text-align: center;
   align-items: center;
   justify-content: space-between;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   padding: 1rem;
 }
@@ -254,7 +254,7 @@ height: 300px;
 }
 
 .img-box {
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   width: 100%;
   max-width: 800px;
@@ -306,7 +306,7 @@ height: 300px;
   padding: 1.5rem;
   width: 400px;
   height: auto;
-  border-bottom-right-radius: 10px;
+  border-bottom-right-radius: 5px;
 }
 
 .social-icons {
@@ -317,8 +317,8 @@ height: 300px;
   display: flex;
   justify-content: space-between;
   text-align: center;
- border-bottom-left-radius: 10px;
-   border-bottom-right-radius: 10px;
+ border-bottom-left-radius: 5px;
+   border-bottom-right-radius: 5px;
 }
 
 .social-icons a {
@@ -394,7 +394,7 @@ h2 span {
 
 .card {
   background: white;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 20px;
   text-align: center;
   height: 190px;
@@ -410,7 +410,7 @@ h2 span {
   align-items: center;
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   width: 100%;
   max-width: 800px;
@@ -432,7 +432,7 @@ h2 span {
   font-weight: bold;
   font-size: 1.2rem;
  flex-wrap: wrap;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   width: 100%;
   max-width: 800px;
@@ -520,13 +520,13 @@ span{
   width: 100%;
   max-width: 800px;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
 .img-boxing img {
    background: white;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   width: 100%;
   max-width: 800px;
@@ -537,7 +537,7 @@ span{
   width: 100%;
   max-width: 800px;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   padding: 2rem;
   text-align: center;
@@ -592,7 +592,7 @@ h2{
 
 }
 .lang{
-  border-radius: 10px;
+  border-radius: 5px;
   border: 2px solid rgb(245, 138, 15);
   width: 200px;
   height: 100px;
@@ -679,7 +679,7 @@ color: #e2e8f0;
 font-size: 0.9rem;
 background-color: white;
 padding: 0.7rem 1rem;
-border-radius: 0.4rem;
+border-radius: 5px;
 width: 100px;
 height: 160px;
 flex-wrap: wrap;
@@ -848,7 +848,7 @@ footer{
   text-decoration: none;
   color: #f1a20e;
   font-weight: 800;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 50px 60px;
 }
 
@@ -1104,6 +1104,7 @@ body.dark-mode footer{
 @media (max-width: 768px) {
 
 .services{
+  margin: 0;
  padding: 0;
 }
 
@@ -1161,7 +1162,7 @@ body.dark-mode footer{
  .cons{
     height: 48px;
     width: 50%;
-    border-bottom-left-radius: 10px;
+    border-bottom-left-radius: 5px;
   }
   .social-icons{
     display: flex;
@@ -1204,7 +1205,6 @@ body.dark-mode footer{
    .img-box{
     height: 100%;
    }
-
 }
 
 
@@ -1280,13 +1280,12 @@ max-width: 1620px;
 }
 
 .Jervin{
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   display: flex;
   width: 100%;
 }
  
 .services{
- 
   display: flex;
   flex-direction: row;
 }
@@ -1325,9 +1324,8 @@ width: 150px;
 }
 
 .descrip{
-  width: 100%;
   max-width: 900px;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .slogan{
@@ -1344,7 +1342,7 @@ width: 150px;
   padding: 0%;
   max-width: 900px;
   width: 90%;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 1rem;
 }
 
@@ -1361,7 +1359,7 @@ ul{
 }
 
 .slogan-text{
-  font-size: 100%;
+  font-size: 150%;
 }
 
 
@@ -1386,7 +1384,7 @@ justify-content: flex-start;
 
 
 .services{
-width: 90%;
+width: 100%;
 height: 70%;
 }
 
