--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   -moz-user-select: none;   
   -ms-user-select: none;    
   user-select: none; 
+  -webkit-tap-highlight-color: transparent;
 }
 
 
@@ -65,7 +66,6 @@ ul li a{
 }
 
 body, html{
- 
   background: #fff;
   color: #333;
   line-height: 1.6;
@@ -745,7 +745,9 @@ label{
     height: 32px;
     border-radius: 899px;
     background-color: whitesmoke;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.05) inset;
+      box-shadow: 
+    0 4px 6px rgba(0, 0, 0, 0.2),   /* soft shadow below */
+    0 1px 3px rgba(0, 0, 0, 0.09) inset; 
     cursor: pointer;
     position: relative;
     transition: background-color 1s ease;
@@ -1050,6 +1052,11 @@ body.dark-mode footer{
   background-color:  #05083e;
 }
 
+body.dark-mode label {
+  box-shadow:
+    0 0 10px rgba(255, 255, 255, 0.3),
+    inset 0 1px 2px rgba(255, 255, 255, 0.05);
+}
 /* MOBILE PHONR MEDIA */
 
 @media (max-width: 600px){
