--- a/style.css
+++ b/style.css
@@ -95,14 +95,16 @@ body, html{
 /* Navbar Glass Effect */
 .navbar {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 70px;
-  background: rgba(255, 255, 255, 0.08);
+  top: 20px;
+  left: 7.5%;
+  width: calc(100% - 40px);
+  max-width: 1618px;
+  height: 100px;
+  background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(15px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   padding: 1rem 2rem;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -110,7 +112,8 @@ body, html{
   overflow: hidden;
   transition: height 0.7s ease;
   z-index: 999;
-   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+   box-shadow: 0 4px 15px  rgba(0, 0, 0, 0.3);
+   border-radius: 10px;
 }
 
 .navbar.open {
@@ -176,6 +179,7 @@ body, html{
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.4s ease;
+  padding-top: 2rem;
 }
 
 .navbar.open .nav-links {
@@ -201,7 +205,7 @@ body, html{
   max-width: 1900px;
   padding: 10px 20px;
   top: 0%;
-  padding-top: 6rem;
+  padding-top: 9rem;
   background-color: white;
 }
 
@@ -507,7 +511,7 @@ span{
   justify-content: space-between;
   height: fit-content;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-  max-width: 1600px;
+  max-width: 1617px;
   width: 100%;
   padding: 5rem;
   height: auto;
@@ -1133,6 +1137,11 @@ body.dark-mode label {
   flex-direction: column-reverse;
 }
 
+.navbar{
+  width: calc(105% - 60px);
+  left: 20px;
+}
+
 
 }
 
@@ -1274,6 +1283,9 @@ max-width: 1620px;
 }
 
 @media  (max-width: 1024px){
+  .navbar{
+    width: calc(100% - 40px);
+  }
 .intro{
   display: flex;
   flex-wrap: wrap;
